<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.MyApplication.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

        <TextView
            android:id="@+id/text_nombre"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="290dp"
            android:fontFamily="@font/extra_bold"
            android:gravity="center_horizontal"
            android:text="@string/curita_san_marcos"
            android:textColor="#2260FF"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/text_app"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="420dp"
            android:fontFamily="@font/semi_bold"
            android:gravity="center_horizontal"
            android:text="@string/aplicaci_n_de_citas_m_dicas"
            android:textColor="#2260FF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_descripcion"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="480dp"
            android:fontFamily="@font/light"
            android:gravity="center_horizontal"
            android:text="@string/recibe_atenci_n_m_dica_especializada_para_diagnosticar_tratar_y_prevenir_enfermedades_asegurando_tu_bienestar"
            android:textColor="#070707"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/group_93"
            android:layout_marginStart="138dp"
            android:layout_marginTop="150dp" />

        <Button
            android:id="@+id/button_inicio"
            android:layout_width="204dp"
            android:layout_height="60dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="550dp"
            android:backgroundTint="#2260FF"
            android:fontFamily="@font/semi_bold"
            android:text="@string/iniciar_sesi_n"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColorLink="#2260FF"
            android:textSize="24sp"
            android:textStyle="normal"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/button_registro"
            android:layout_width="204dp"
            android:layout_height="60dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="610dp"
            android:backgroundTint="#CAD6FF"
            android:fontFamily="@font/semi_bold"
            android:text="Registrase"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColorLink="#2260FF"
            android:textSize="24sp"
            android:textStyle="normal"
            android:textColor="#2260FF"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>